.github: try to merge version information

--- a/.github/workflows/freebsdvm-go-ci_ubuntu-latest.yml
+++ b/.github/workflows/freebsdvm-go-ci_ubuntu-latest.yml
@@ -21,5 +21,5 @@ jobs:
           
 
           run: |
-            pkg install -y go
-            make versions.yml
+            pkg install -y go go-yq
+            make merge-versions
